wip-try to get all data loads to use resource path, cleanups

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -204,6 +204,7 @@ add_library(lib${APP_NAME} STATIC
     tinyxml/tinyxml.h
     tinyxml/tinyxmlerror.cpp
     tinyxml/tinyxmlparser.cpp
+    rand.c
     lua.hpp
     ${MODULE_RESOURCE_HEADERS}
 )
