--- a/.github/workflows/github-actions-macos.yml
+++ b/.github/workflows/github-actions-macos.yml
@@ -24,4 +24,4 @@ jobs:
         if: always()
         with:
           name: build-logs
-          path: "**/*.log"
+          path: "build/*/*.log"
